--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,7 +1,9 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
-        <welcome-file-list>
-            <welcome-file>
-                mypage.html
-            </welcome-file>
-        </welcome-file-list>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+    <welcome-file-list>
+        <welcome-file>mypage.html</welcome-file>
+    </welcome-file-list>
 </web-app>
