--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,7 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <welcome-file-list>
-        <welcome-file>mypage.html</welcome-file>
-    </welcome-file-list>
+   <servlet>
+       <servlet-name>Simple</servlet-name>
+       <servlet-class>ru.mysite.web.servlet.SimpleServlet</servlet-class>
+   </servlet>
+    <servlet-mapping>
+        <servlet-name>Simple</servlet-name>
+        <url-pattern>/simple</url-pattern>
+    </servlet-mapping>
 </web-app>
